Reduce memory used by Graylog test container